# SEAL_release

./: LICENSE  README.md  install.sh  setup.sh  uninstall.sh
dev_config/: .vimrc  README.rd
doc/: .gitignore  Smurf.tex  SmurfBasic.tex  SmurfEmulator.tex  macro.tex  references.bib
doc/Diagrams/: Core.dia  Overview.dia  Trace.dia
doc/Figures/: Core.eps  Overview.eps  Trace.eps
doc/Tables/: BasicSummary.tex  SmurfTypes.tex
examples/Python3/: gencore.py  leakagemodels.py  readtrace.py
examples/cpp/FrameV2/: Makefile  README.rd  createcore.py  gentrace.cpp  print.cpp  print.hpp  readtrace.cpp  readtracefile.py  testcore.scs
examples/cpp/apiv2/: .gitignore  Makefile  createcore.py  gentrace.cpp  gentracefifo.cpp  reader.cpp  testcore.scs
examples/cpp/sealcoretest/: .gitignore  Makefile  createcore.py  loadcore.cpp
examples/cpp/sealctracetest/: .gitignore  Makefile  dymreadtrace.cpp  gentrace.cpp  importtrace.py  readtrace.cpp  readtracefile.py
examples/cpp/sealiotest/: .gitignore  Makefile  sealclient.cpp  sealclient.py  sealserver.cpp
examples/cpp/sealqueue/: Makefile  sealqueue.cpp
sealpy/: .gitignore  README.md  build_wheel.sh  pyproject.toml  reinstall.sh
sealpy/src/: Core.py  EncodeDict.py  Frame.py  IO.py  LeakageModel.py  Trace.py  seal.py
src/: .gitignore  .indent.pro  Makefile  chain.c  chain.h  core.c  core.h  emulator.c  emulator.h  frame.c  frame.h  seal.c  seal.h  sealconfig.h  sealscript.c  sealscript.h  sealsym.c  sealsym.h  sealutl.c  sealutl.h  symbolic.c  symbolic.h  trace.c  trace.h  version.h
tools/: parseet.py  readsym.py
(+16 files in other folders)
